--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
   "name": "moje-studium",
   "description": "Webová aplikace slouží jako pomocník žáků středních škol a studentů vysokých škol. Po registraci umožňuje vstup do portálu daného žáka/studenta, kam si může ukládat školní soubory či poznámky různého druhu (písemné práce, domácí úkoly, školní akce a jiné). Tato data může následně sdílet se spolužáky v rámci třídy nebo s konkrétními uživateli.",
-  "repository": "git@github.com:ceskyDJ/moje-studium.git",
+  "main": "gulpfile.js",
+  "repository": "github:ceskyDJ/moje-studium",
   "author": "Michal ŠMAHEL <admin@ceskydj.cz>",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true,
+  "scripts": {
+    "movefonts": "cp node_modules/@fortawesome/fontawesome-pro/webfonts/* www/fonts/"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-pro": "^5.11.2",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
+    "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
+    "gulp-clean": "^0.4.0",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.1.1",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-util": "^3.0.8",
+    "less-plugin-autoprefix": "^2.0.0",
+    "vinyl-ftp": "^0.6.1"
+  }
 }
