--- a/www/.htaccess
+++ b/www/.htaccess
@@ -16,5 +16,5 @@ Allow from all
   # Presmerovani veskereho provozu na index.php (krome pozadavku na soubory danych typu)
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule !\.(css|js|php|html|icon|zip|rar|png|jpg|gif|pdf|otf|eot|svg|ttf|woff|woff2)$ index.php [L]
+  RewriteRule !\.(css|js|php|phtml|html|ico|zip|rar|png|jpg|gif|pdf|otf|eot|svg|ttf|woff|woff2)$ index.php [L]
 </IfModule>
