Priprava na registraci zakomponovana do systemu

--- a/src/config/base-config.ini
+++ b/src/config/base-config.ini
@@ -21,5 +21,6 @@ domain = "<Development server domain>"
 ip = 127.0.0.1
 
 [routing]
-route = "[%controller%]/[%action%]/[%data%]"
+route = "[%component%]/[%controller%]/[%action%]/[%data%]"
 root-namespace = "App"
+default-component = "presentation"
