Pridani uzivatelske entity do systemu

--- a/src/config/base-config.ini
+++ b/src/config/base-config.ini
@@ -24,3 +24,6 @@ ip = 127.0.0.1
 route = "[%component%]/[%controller%]/[%action%]/[%data%]"
 root-namespace = "App"
 default-component = "presentation"
+
+[injects]
+IPermissionManager = "App\Model\PermissionManager"
