--- a/src/config/base-config.ini
+++ b/src/config/base-config.ini
@@ -14,6 +14,7 @@ host = "<Database host (IP address of database server)>"
 database = "<Database name>"
 user-name = "<Name of database control user>"
 user-password = "<Password of the user>"
+use-doctrine = true
 
 [development-server]
 mode = null
