Prihlasovani a odhlasovani. Aktualizace Mamuta a dalsich knihoven

--- a/src/config/base-config.ini
+++ b/src/config/base-config.ini
@@ -25,6 +25,27 @@ ip = 127.0.0.1
 route = "[%component%]/[%controller%]/[%action%]/[%data%]"
 root-namespace = "App"
 default-component = "presentation"
+login-page = "log/in"
 
 [injects]
+IClassGroupRepository = "App\Repository\DBClassGroupRepository"
+ILessonRepository = "App\Repository\DBLessonRepository"
+INotificationTextRepository = "App\Repository\DBNotificationTextRepository"
+IReminderRepository = "App\Repository\DBReminderRepository"
+ITaughtGroupRepository = "App\Repository\DBTaughtGroupRepository"
+IClassRoomRepository = "App\Repository\DBClassRoomRepository"
+ILoginTokenRepository = "App\Repository\DBLoginTokenRepository"
+IProfileIconRepository = "App\Repository\DBProfileIconRepository"
+ISchoolClassRepository = "App\Repository\DBSchoolClassRepository"
+ITeacherRepository = "App\Repository\DBTeacherRepository"
+ICountryRepository = "App\Repository\DBCountryRepository"
+INoteRepository = "App\Repository\DBNoteRepository"
+IRankRepository = "App\Repository\DBRankRepository"
+ISchoolRepository = "App\Repository\DBSchoolRepository"
+IUserRepository = "App\Repository\DBUserRepository"
+IFileRepository = "App\Repository\DBFileRepository"
+INotificationRepository = "App\Repository\DBNotificationRepository"
+IRegionRepository = "App\Repository\DBRegionRepository"
+ISchoolSubjectRepository = "App\Repository\DBSchoolSubjectRepository"
 IPermissionManager = "App\Model\PermissionManager"
+IUserManager = "App\Model\UserManager"
