Vyber tridy vyzaduje potvrzeni stavajiciho clena

--- a/src/config/base-config.ini
+++ b/src/config/base-config.ini
@@ -46,5 +46,6 @@ IFileRepository = "App\Repository\DBFileRepository"
 INotificationRepository = "App\Repository\DBNotificationRepository"
 IRegionRepository = "App\Repository\DBRegionRepository"
 ISchoolSubjectRepository = "App\Repository\DBSchoolSubjectRepository"
+IClassSelectionRequestRepository = "App\Repository\DBClassSelectionRequestRepository"
 IPermissionManager = "App\Model\PermissionManager"
 IUserManager = "App\Model\UserManager"
