Profil tridy - dynamika obsahu

--- a/src/config/base-config.ini
+++ b/src/config/base-config.ini
@@ -32,7 +32,7 @@ ILessonRepository = "App\Repository\DBLessonRepository"
 INotificationTextRepository = "App\Repository\DBNotificationTextRepository"
 IReminderRepository = "App\Repository\DBReminderRepository"
 ITaughtGroupRepository = "App\Repository\DBTaughtGroupRepository"
-IClassRoomRepository = "App\Repository\DBClassRoomRepository"
+IClassroomRepository = "App\Repository\DBClassroomRepository"
 ILoginTokenRepository = "App\Repository\DBLoginTokenRepository"
 IProfileIconRepository = "App\Repository\DBProfileIconRepository"
 ISchoolClassRepository = "App\Repository\DBSchoolClassRepository"
